@@ -3,6 +3,8 @@
   * Do not reboot after taking a dump with fadump.
   * Add a new command to dump the configuration variables: dump_config
   * Configuration options can be passed via the kernel command line.
+  * Add a helper script (kdump-bootloader.pl) for updating the boot
+    loader configuration.
   * Support for kdump on S/390x.
 
 0.8.3
